--- a/_posts/2022-02-27-깃헙토큰발급.md
+++ b/_posts/2022-02-27-깃헙토큰발급.md
@@ -1,8 +1,7 @@
 # Git Push 인증 오류 현상
 
 
-
-- remote: Support for password authentication was removed on August 13, 2021. Please use a personal access token instead.
+remote: Support for password authentication was removed on August 13, 2021. Please use a personal access token instead.
 
   remote: Please see https://github.blog/2020-12-15-token-authentication-requirements-for-git-operations/ for more information.
 
